// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Brands component renders correctly 1`] = `
<div>
  <div
    class="MuiGrid-root Grid MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 MuiGrid-grid-lg-6 MuiGrid-grid-xl-4"
    >
      <a
        aria-disabled="false"
        class="MuiButtonBase-root OverviewCard OverviewCard--clickable"
        data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"MC: documentLibrary.card.download\\",\\"action\\":\\"http://doesnot-exist.com/fileName\\"}"
        href="https:http://doesnot-exist.com/fileName"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
      >
        <div
          class="gatsby-image-wrapper gatsby-image-wrapper-constrained header-picture Media"
          data-gatsby-image-wrapper=""
          style="overflow: hidden; display: inline-block; vertical-align: top;"
        >
          <div
            style="max-width: 5184px; display: block;"
          >
            <img
              alt=""
              aria-hidden="true"
              role="presentation"
              src="data:image/svg+xml;charset=utf-8,%3Csvg height='3456' width='5184' xmlns='http://www.w3.org/2000/svg' version='1.1'%3E%3C/svg%3E"
              style="max-width: 100%; display: block; position: static;"
            />
          </div>
          <div
            aria-hidden="true"
            data-placeholder-image=""
            style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
          />
          <picture>
            <source
              data-srcset="//doesnot-exist.com/image.jpg?w=1296&h=864&q=50&fm=webp 1296w,//doesnot-exist.com/image.jpg?w=2592&h=1728&q=50&fm=webp 2592w,//doesnot-exist.com/image.jpg?w=4000&h=2666&q=50&fm=webp 4000w"
              sizes="(min-width: 5184px) 5184px, 100vw"
              type="image/webp"
            />
            <img
              alt="alt text"
              data-gatsby-image-ssr=""
              data-main-image=""
              data-src="//doesnot-exist.com/image.jpg?w=1296&h=864&fl=progressive&q=50&fm=jpg"
              data-srcset="//doesnot-exist.com/image.jpg?w=1296&h=864&fl=progressive&q=50&fm=jpg 1296w,//doesnot-exist.com/image.jpg?w=2592&h=1728&fl=progressive&q=50&fm=jpg 2592w,//doesnot-exist.com/image.jpg?w=4000&h=2666&fl=progressive&q=50&fm=jpg 4000w"
              decoding="async"
              draggable="false"
              loading="lazy"
              sizes="(min-width: 5184px) 5184px, 100vw"
              style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; object-fit: cover; object-position: center; opacity: 0;"
            />
          </picture>
          <noscript />
          <script
            type="module"
          >
            const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1)}}
          </script>
        </div>
        <div
          class="body"
        >
          <h4
            class="MuiTypography-root title title--no-brand-logo Typography MuiTypography-h4"
          >
            contentful-document-title
          </h4>
          <div
            class="children text"
          />
          <div
            class="footer"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root MuiButton-root buttonStyles-root-1 MuiButton-contained buttonStyles-contained-3 MuiButton-containedPrimary"
              role="button"
              tabindex="0"
            >
              <span
                class="MuiButton-label buttonStyles-label-4"
              >
                MC: documentLibrary.card.download
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </span>
          </div>
        </div>
        <span
          class="MuiTouchRipple-root"
        />
      </a>
    </div>
    <div
      class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 MuiGrid-grid-lg-6 MuiGrid-grid-xl-4"
    >
      <a
        aria-disabled="false"
        class="MuiButtonBase-root OverviewCard OverviewCard--clickable"
        data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"MC: documentLibrary.card.download\\",\\"action\\":\\"http://doesnot-exist.com/fileName\\"}"
        href="https:http://doesnot-exist.com/fileName"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
      >
        <div
          class="body"
        >
          <h4
            class="MuiTypography-root title title--no-brand-logo Typography MuiTypography-h4"
          >
            contentful-document-title
          </h4>
          <div
            class="children text"
          >
            <div
              class="RichText"
            >
              <p
                class="MuiTypography-root Typography MuiTypography-body1 MuiTypography-gutterBottom"
              >
                test rich text
              </p>
            </div>
          </div>
          <div
            class="footer"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root MuiButton-root buttonStyles-root-1 MuiButton-contained buttonStyles-contained-3 MuiButton-containedPrimary"
              role="button"
              tabindex="0"
            >
              <span
                class="MuiButton-label buttonStyles-label-4"
              >
                MC: documentLibrary.card.download
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </span>
          </div>
        </div>
        <span
          class="MuiTouchRipple-root"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`Brands component renders correctly for mobile 1`] = `
<div>
  <div
    class="MuiGrid-root Grid MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 MuiGrid-grid-lg-6 MuiGrid-grid-xl-4"
    >
      <a
        aria-disabled="false"
        class="MuiButtonBase-root OverviewCard OverviewCard--clickable"
        data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"MC: documentLibrary.card.download\\",\\"action\\":\\"http://doesnot-exist.com/fileName\\"}"
        href="https:http://doesnot-exist.com/fileName"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
      >
        <div
          class="gatsby-image-wrapper gatsby-image-wrapper-constrained header-picture Media"
          data-gatsby-image-wrapper=""
          style="overflow: hidden; display: inline-block; vertical-align: top;"
        >
          <div
            style="max-width: 5184px; display: block;"
          >
            <img
              alt=""
              aria-hidden="true"
              role="presentation"
              src="data:image/svg+xml;charset=utf-8,%3Csvg height='3456' width='5184' xmlns='http://www.w3.org/2000/svg' version='1.1'%3E%3C/svg%3E"
              style="max-width: 100%; display: block; position: static;"
            />
          </div>
          <div
            aria-hidden="true"
            data-placeholder-image=""
            style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
          />
          <picture>
            <source
              data-srcset="//doesnot-exist.com/image.jpg?w=1296&h=864&q=50&fm=webp 1296w,//doesnot-exist.com/image.jpg?w=2592&h=1728&q=50&fm=webp 2592w,//doesnot-exist.com/image.jpg?w=4000&h=2666&q=50&fm=webp 4000w"
              sizes="(min-width: 5184px) 5184px, 100vw"
              type="image/webp"
            />
            <img
              alt="alt text"
              data-gatsby-image-ssr=""
              data-main-image=""
              data-src="//doesnot-exist.com/image.jpg?w=1296&h=864&fl=progressive&q=50&fm=jpg"
              data-srcset="//doesnot-exist.com/image.jpg?w=1296&h=864&fl=progressive&q=50&fm=jpg 1296w,//doesnot-exist.com/image.jpg?w=2592&h=1728&fl=progressive&q=50&fm=jpg 2592w,//doesnot-exist.com/image.jpg?w=4000&h=2666&fl=progressive&q=50&fm=jpg 4000w"
              decoding="async"
              draggable="false"
              loading="lazy"
              sizes="(min-width: 5184px) 5184px, 100vw"
              style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; object-fit: cover; object-position: center; opacity: 0;"
            />
          </picture>
          <noscript />
          <script
            type="module"
          >
            const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1)}}
          </script>
        </div>
        <div
          class="body"
        >
          <h4
            class="MuiTypography-root title title--no-brand-logo Typography MuiTypography-h4"
          >
            contentful-document-title
          </h4>
          <div
            class="children text"
          />
          <div
            class="footer"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root MuiButton-root buttonStyles-root-21 MuiButton-contained buttonStyles-contained-23 MuiButton-containedPrimary"
              role="button"
              tabindex="0"
            >
              <span
                class="MuiButton-label buttonStyles-label-24"
              >
                MC: documentLibrary.card.download
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </span>
          </div>
        </div>
        <span
          class="MuiTouchRipple-root"
        />
      </a>
    </div>
    <div
      class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 MuiGrid-grid-lg-6 MuiGrid-grid-xl-4"
    >
      <a
        aria-disabled="false"
        class="MuiButtonBase-root OverviewCard OverviewCard--clickable"
        data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"MC: documentLibrary.card.download\\",\\"action\\":\\"http://doesnot-exist.com/fileName\\"}"
        href="https:http://doesnot-exist.com/fileName"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
      >
        <div
          class="body"
        >
          <h4
            class="MuiTypography-root title title--no-brand-logo Typography MuiTypography-h4"
          >
            contentful-document-title
          </h4>
          <div
            class="children text"
          >
            <div
              class="RichText"
            >
              <p
                class="MuiTypography-root Typography MuiTypography-body1 MuiTypography-gutterBottom"
              >
                test rich text
              </p>
            </div>
          </div>
          <div
            class="footer"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root MuiButton-root buttonStyles-root-21 MuiButton-contained buttonStyles-contained-23 MuiButton-containedPrimary"
              role="button"
              tabindex="0"
            >
              <span
                class="MuiButton-label buttonStyles-label-24"
              >
                MC: documentLibrary.card.download
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </span>
          </div>
        </div>
        <span
          class="MuiTouchRipple-root"
        />
      </a>
    </div>
  </div>
</div>
`;
